odev-3 file was edited

--- a/Week-1/odev-3/iletisim.html
+++ b/Week-1/odev-3/iletisim.html
@@ -9,20 +9,23 @@
     <a href="./index.html">Ana Sayfa</a>
     <a href="./hakkinda.html">Hakkında</a>
     <a href="./servisler.html">Servisler</a>
-    <h2>İletişim</h2>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h2>Bize Ulaşın</h2>
+    <p>Her türlü sorunuz için bizimle iletişime geçebilirsiniz.</p>
     <ul>
-        <li></li>
+        <li>Adres: İstanbul, Türkiye</li>
+        <li>Telefon: +90 555 555 55 55</li>
+        <li>E-posta: info@silroadweb.com</li>
     </ul>
     <form action="">
-        <label for="name">Ad</label>
-        <input type="text">
-        <label for="lname">Soyad</label>
-        <input type="text">
-        <label for="email">Email</label>
-        <input type="email">
-        <textarea name="textarea" id="textarea" placeholder="Lütfen mesajınızı yazınız."></textarea>
-        <button>Gönder</button>
+        <label for="name">Adınız:</label><br>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="lname">Soyad</label><br>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="email">E-posta:</label><br>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="message">Mesajınız:</label><br>
+        <textarea name="message" id="message" placeholder="Lütfen mesajınızı yazınız." rows="4" cols="40"></textarea><br><br>
+        <input type="submit" value="Gönder">
 
 
 
