--- a/Week-1/odev-3/index.html
+++ b/Week-1/odev-3/index.html
@@ -6,16 +6,18 @@
     <title>Ana Sayfa</title>
 </head>
 <body>
+    <a href="./index.html">Ana Sayfa</a>
     <a href="./hakkinda.html">Hakkında</a>
     <a href="./servisler.html">Servisler</a>
     <a href="./iletisim.html">İletişim</a>
-    <h1>Rehber Web Sitesi</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, libero.</p>
+    <h1>Silroad Web'e Hoş Geldiniz!</h1>
+    <p>Silroad Web, modern, hızlı ve güvenilir web çözümleri sunar.</p>
+    <p>Frontend, Backend ve Full Stack web geliştirme hizmetleri veriyoruz.</p>
     <img src="" alt="">
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Frontend Geliştirme</li>
+        <li>Backend Geliştirme</li>
+        <li>Full Stack Web Geliştirme</li>
     </ol>
 </body>
 </html>
