--- a/Week-1/odev-3/servisler.html
+++ b/Week-1/odev-3/servisler.html
@@ -13,7 +13,16 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde?</p>
     <ul>
         <li>
-            
+            <h3>Frontend Geliştirme</h3>
+            <p>Modern ve kullanıcı dostu arayüzler tasarlıyoruz.</p>
+        </li>
+        <li>
+            <h3>Backend Geliştirme</h3>
+            <p>Güvenli ve ölçeklenebilir sunucu tarafı çözümleri üretiyoruz.</p>
+        </li>
+        <li>
+            <h3>Full Stack Web Geliştirme</h3>
+            <p>Projelerinizi baştan sona eksiksiz bir şekilde geliştiriyoruz.</p>
         </li>
     </ul>
 </body>
