--- a/Week-1/odev-3/hakkinda.html
+++ b/Week-1/odev-3/hakkinda.html
@@ -9,10 +9,13 @@
     <a href="./index.html">Ana Sayfa</a>
     <a href="./servisler.html">Servisler</a>
     <a href="./iletisim.html">İletişim</a>
-    <h2>Hakkımda</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, blanditiis.</p>
+    <h2>Biz Kimiz?</h2>
+    <p>Silroad Web, 2024 yılında kurulmuş, genç ve dinamik bir yazılım şirketidir.</p>
+    <p>Hedefimiz, müşterilerimize yenilikçi web çözümleri sunmaktır.</p>
+    <h3>Önemli Tarihler</h3>
     <ol>
-        <li></li>
+        <li>2024 - Şirket Kuruluşu</li>
+        <li>2025 - İlk büyük projemizin lansmanı</li>
     </ol>
 </body>
 </html>
