image was added

--- a/Week-1/odev-3/index.html
+++ b/Week-1/odev-3/index.html
@@ -13,7 +13,7 @@
     <h1>Silroad Web'e Hoş Geldiniz!</h1>
     <p>Silroad Web, modern, hızlı ve güvenilir web çözümleri sunar.</p>
     <p>Frontend, Backend ve Full Stack web geliştirme hizmetleri veriyoruz.</p>
-    <img src="" alt="">
+    <img src="./1.jpg" alt="web development image">
     <ol>
         <li>Frontend Geliştirme</li>
         <li>Backend Geliştirme</li>
