--- a/Week-2/odev-1/index.html
+++ b/Week-2/odev-1/index.html
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Benim Blog Sitem. Tüm Hakları Saklıdır.</p>
+        <p>&copy; 2025 Blog Sitem. Tüm Hakları Saklıdır.</p>
     </footer>
 
 </body>
