--- a/Week-2/odev-1/post.html
+++ b/Week-2/odev-1/post.html
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Benim Blog Sitem. Tüm Hakları Saklıdır.</p>
+        <p>&copy; 2025 Blog Sitem. Tüm Hakları Saklıdır.</p>
     </footer>
 
 </body>
